<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/placeholder" />

        <RelativeLayout
            android:id="@+id/relativelayout"
            android:layout_gravity="bottom|right"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvThumbNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="4dp"
                android:gravity="bottom|right"
                android:text="@string/cornerNumber"
                android:textColor="@color/colorTextLight"
                android:background="@drawable/rounded_corner" />

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/groupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvGroupName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:text="@string/groupSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNumItems"
            android:layout_marginStart="8dp"/>

        <TextView
            android:text="@string/groupDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>